--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,7 +112,7 @@ scale_aws_pipeline:
     - export MASTER_NODE=`curl -ks https://${APOCNG_ENDPOINT}/api/store2/${ENV_ID}/ | jq -r '[.apocng_terraform.modules[].resources[] | select(.type == "aws_instance")][0].primary.attributes.public_ip'`
     - export REMOTE_DECK_ENDPOINT=`ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null  -i /tmp/aws_key ${SSH_USERNAME}@${MASTER_NODE} sudo kubectl -n k8spray get svc spinnaker-k8spray-deck -o jsonpath='{.spec.clusterIP}:{.spec.ports[0].port}'`
     - >
-      echo '{"type":"manual",  "user":"[anonymous]", "parameters": {"N": 1 } }' | ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/aws_key ${SSH_USERNAME}@${MASTER_NODE} curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' http://$REMOTE_DECK_ENDPOINT/gate/pipelines/lcm/Kubernetes%20scale | jq -r '.ref' | tee /tmp/aws_scale_id
+      echo '{"type":"manual",  "user":"[anonymous]", "parameters": {"N": 1 } }' | ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/aws_key ${SSH_USERNAME}@${MASTER_NODE} curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' http://$REMOTE_DECK_ENDPOINT/gate/pipelines/lcm/Kubernetes%20AWS%20scale | jq -r '.ref' | tee /tmp/aws_scale_id
     - export SCALE_PIPELINE_ID=`cat /tmp/aws_scale_id`
     - while [ `ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/aws_key ${SSH_USERNAME}@${MASTER_NODE} curl -s $REMOTE_DECK_ENDPOINT/gate${SCALE_PIPELINE_ID} | jq -r .status` == "RUNNING" ]; do sleep 5; done
     - ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/aws_key ${SSH_USERNAME}@${MASTER_NODE} curl -s $REMOTE_DECK_ENDPOINT/gate${SCALE_PIPELINE_ID} | jq -r .status | grep SUCCEEDED
@@ -146,26 +146,29 @@ install_bm_pipeline:
     - schedules
     - pipelines
 
-# NOT SUPPORTED YET BY SPINNAKER
-#scale_bm_pipeline:
-#  stage: scale
-#  script:
-#    - export APOCNG_ENDPOINT=`sudo -i sh -c "kubectl -n k8spray get svc apocng-k8spray -o jsonpath='{.spec.clusterIP}:{.spec.ports[0].port}'"`
-#    - export ENV_ID=`cat /tmp/env_id_bm`
-#    - curl -k https://${APOCNG_ENDPOINT}/api/store2/${ENV_ID}/ | jq -r '.apocng_ssh_private_key' > /tmp/bm_key
-#    - chmod 600 /tmp/bm_key
-#    - export SSH_USER=ubuntu
-#    - export MASTER_NODE=`curl -ks https://${APOCNG_ENDPOINT}/api/store2/${ENV_ID}/ | jq -r '.apocng_manual_nodes[0]'`
-#    - export REMOTE_DECK_ENDPOINT=`ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null  -i /tmp/bm_key ${SSH_USERNAME}@${MASTER_NODE} sudo kubectl -n k8spray get svc spinnaker-k8spray-deck -o jsonpath='{.spec.clusterIP}:{.spec.ports[0].port}'`
-#    - export NEW_NODE=`/usr/local/bin/maas_table.sh | tail -n1 | awk '{print $1}' | xargs | sed 's/ /,/g'`
-#    - echo
-#  environment:
-#    name: baremetal
-#  only:
-#    - web
-#    - triggers
-#    - schedules
-#    - pipelines
+scale_bm_pipeline:
+  stage: scale
+  script:
+    - export APOCNG_ENDPOINT=`sudo -i sh -c "kubectl -n k8spray get svc apocng-k8spray -o jsonpath='{.spec.clusterIP}:{.spec.ports[0].port}'"`
+    - export ENV_ID=`cat /tmp/env_id_bm`
+    - curl -k https://${APOCNG_ENDPOINT}/api/store2/${ENV_ID}/ | jq -r '.apocng_ssh_private_key' > /tmp/bm_key
+    - chmod 600 /tmp/bm_key
+    - export SSH_USER=ubuntu
+    - export MASTER_NODE=`curl -ks https://${APOCNG_ENDPOINT}/api/store2/${ENV_ID}/ | jq -r '.apocng_manual_nodes[0]'`
+    - export REMOTE_DECK_ENDPOINT=`ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null  -i /tmp/bm_key ${SSH_USERNAME}@${MASTER_NODE} sudo kubectl -n k8spray get svc spinnaker-k8spray-deck -o jsonpath='{.spec.clusterIP}:{.spec.ports[0].port}'`
+    - export NEW_NODES=`/usr/local/bin/maas_table.sh | tail -n1 | awk '{print $1}' | xargs | sed 's/ /,/g'`
+    - >
+      echo '{"type":"manual",  "user":"[anonymous]", "parameters": {"NODES": "'${NEW_NODES}'" } }' | ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/bm_key ${SSH_USERNAME}@${MASTER_NODE} curl -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' http://$REMOTE_DECK_ENDPOINT/gate/pipelines/lcm/Kubernetes%20manual%20scale | jq -r '.ref' | tee /tmp/bm_scale_id
+    - export SCALE_PIPELINE_ID=`cat /tmp/bm_scale_id`
+    - while [ `ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/aws_key ${SSH_USERNAME}@${MASTER_NODE} curl -s $REMOTE_DECK_ENDPOINT/gate${SCALE_PIPELINE_ID} | jq -r .status` == "RUNNING" ]; do sleep 5; done
+    - ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/aws_key ${SSH_USERNAME}@${MASTER_NODE} curl -s $REMOTE_DECK_ENDPOINT/gate${SCALE_PIPELINE_ID} | jq -r .status | grep SUCCEEDED
+  environment:
+    name: baremetal
+  only:
+    - web
+    - triggers
+    - schedules
+    - pipelines
 
 #scale_aws_pipeline:
 #  stage: scale_pipeline
