--- a/playbook.yml
+++ b/playbook.yml
@@ -17,6 +17,7 @@
       resolv_nameservers:
         - 8.8.8.8
         - 8.8.4.4
+      tags: ['any']
 
   tasks:
     - name: "Install {{ item }}"
