--- a/tasks/minikube.yml
+++ b/tasks/minikube.yml
@@ -5,7 +5,7 @@
     path: /root/.minikube
 
 - name: Run minikube
-  command: "minikube start --vm-driver none --memory {{ minikube_memory }} --cpus {{ minikube_cpus }} --bootstrapper kubeadm"
+  command: "minikube start --vm-driver none --kubernetes-version v1.7.7 --memory {{ minikube_memory }} --cpus {{ minikube_cpus }} --bootstrapper kubeadm"
   register: minikube_start
   ignore_errors: true
 
