--- a/tasks/minikube.yml
+++ b/tasks/minikube.yml
@@ -8,7 +8,7 @@
   command: "minikube config set WantReportErrorPrompt false"
 
 - name: Run minikube
-  command: "minikube start --vm-driver none --memory {{ minikube_memory }} --cpus {{ minikube_cpus }} --bootstrapper localkube"
+  command: "minikube start --vm-driver none --memory {{ minikube_memory }} --cpus {{ minikube_cpus }} --kubernetes-version v1.8.0 --bootstrapper localkube"
   register: minikube_start
   ignore_errors: true
 
